[gd_scene load_steps=6 format=3 uid="uid://qt2i8fvgwpg5"]

[ext_resource type="Script" uid="uid://rqna7ifhpnbp" path="res://scripts/gas_cloud.gd" id="1_cloud"]

[sub_resource type="SphereShape3D" id="SphereShape3D_cloud"]
radius = 2.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_cloud"]
emission_shape = 1
emission_sphere_radius = 2.0
gravity = Vector3(0, 0.5, 0)
scale_min = 2.0
scale_max = 3.0
color = Color(0, 0.8, 0, 0.3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cloud"]
transparency = 1
albedo_color = Color(0, 0.8, 0, 0.00392157)
emission_enabled = true
emission = Color(0.435294, 0.8, 0, 1)
emission_energy_multiplier = 0.5

[sub_resource type="SphereMesh" id="SphereMesh_cloud"]
material = SubResource("StandardMaterial3D_cloud")
radius = 1.0
height = 2.0

[node name="GasCloud" type="Area3D"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
collision_layer = 8
script = ExtResource("1_cloud")
damage_per_tick = 25.0
lifetime = 2.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_cloud")

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
amount = 100
lifetime = 2.0
randomness = 1.0
fixed_fps = 100
process_material = SubResource("ParticleProcessMaterial_cloud")
draw_pass_1 = SubResource("SphereMesh_cloud")

[node name="DamageTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
